--- a/templates/orders_list.html
+++ b/templates/orders_list.html
@@ -9,11 +9,13 @@
         </div>
     </nav>
 <ul>
+<!-- 
 <h4>Consumables:</h4>
 <h5> Consumables total:</h5><p>{{context}}</p>
+-->
 
 {% for orders in object_list %}
-   <li>{{ orders.typemodel }} - {{ orders.color  }}- {{ orders.date }} <a href="{% url "updateorder" pk=orders.pk %}">  Update</a></li>
+   <li>{{ orders.typemodel }} - {{ orders.color  }}- {{ orders.date }} <a href="{% url "updateorder" pk=orders.pk %}"> Update</a><a href="{% url "orderdelete" pk=orders.pk %}"> Delete</a></li>
     
 {% empty %}
     <li><h4> No orders listed </h4>
