spelling mistake on template 202003041126

--- a/templates/consumables_list.html
+++ b/templates/consumables_list.html
@@ -14,7 +14,7 @@
    <li><p>- Little Brass-{{ objects.littlebrass  }} </p></li>
    <li><p>- Serial Numbers- {{ objects.sernum }} </p></li>
    <li><p>- Tac-9 Arms- {{objects.tac9arm}} </p></li>
-   <li><p>- Tac 9 Ejectors -{{ objects.Tac9ejector  }} </p></li>
+   <li><p>- Tac 9 Ejectors -{{ objects.tac9ejector  }} </p></li>
    <li><p>- Ar15 Kit -{{ objects.Ar15kit  }} </p></li>
    <li><p>- Ar308 Kit -{{ objects.AR308kit  }} </p></li>
    <p><a href="{% url 'updateconsumables' pk=objects.pk %}">Update</a></p>
