--- a/templates/consumables_list.html
+++ b/templates/consumables_list.html
@@ -15,7 +15,7 @@
    <li><p>- Serial Numbers- {{ objects.sernum }} </p></li>
    <li><p>- Tac-9 Arms- {{objects.tac9arm}} </p></li>
    <li><p>- Tac 9 Ejectors -{{ objects.tac9ejector  }} </p></li>
-   <li><p>- Ar15 Kit -{{ objects.Ar15kit  }} </p></li>
+   <li><p>- Ar15 Kit -{{ objects.ar15kit  }} </p></li>
    <li><p>- Ar308 Kit -{{ objects.AR308kit  }} </p></li>
    <p><a href="{% url 'updateconsumables' pk=objects.pk %}">Update</a></p>
 
