--- a/templates/staffindex.html
+++ b/templates/staffindex.html
@@ -2,14 +2,14 @@
 {% block bodyblock %}
 <div class="container-fluid">
    <h5> how everything works </h5>
-<p> what we are trying to do </p>
+<p> What we are trying to do </p>
 <p> Our inventory and or brass/ejectors/build kits ect shut us down almost monthly. This system is designed 
 to help with keeping track of all this</p>
 <p> April</p>
 <p> When you put in a purchase order, add it under "purchase orders" by color and model with the invoivce #
 . If we receive a partial shipment then update the system to what we still have open. When the whole order is complete then 
 delete the entire order. Add up the total brass inserts/ejectors/serial num inserts for that order. Take it off 
-the consumables count. This is dont only when the order is submitted.</p>
+the consumables count. This is done only when the order is submitted.</p>
 <p>Amy/ JT</p>
 <p> Amy will make a list of what items sold in what amounts the day before once a day. That list will be used by JT to pull the inventory from just this system. Nowhere else. 
 I dont care if its getting shipped or not. If we are backordered 150 black recievers we need to show our available inventory as nothing even if they are still here.
