added to consumables templte 20200306

--- a/templates/consumables_list.html
+++ b/templates/consumables_list.html
@@ -17,6 +17,9 @@
    <li><p>- Tac 9 Ejectors -{{ objects.tac9ejector  }} </p></li>
    <li><p>- Ar15 Kit -{{ objects.ar15kit  }} </p></li>
    <li><p>- Ar308 Kit -{{ objects.AR308kit  }} </p></li>
+   <li><p>- AR15 Buffer Assemblies -{{ objects.AR15_Buffer_Assemblies}} </p></li>
+   <li><p>- AR308 Buffer Assemblies -{{ objects.AR308_Buffer_Assemblies}} </p></li>
+   <li><p>- Ar308 Kit -{{ objects.AR308kit  }} </p></li>
    <li><p>- 80 Jigs -{{ objects.jigs  }} </p></li>
    <li><p>- Drill Bits -{{ objects.drillbits  }} </p></li>
    <li><p>- Jig Screws -{{ objects.jigscrew  }} </p></li>
