--- a/templates/orders_list.html
+++ b/templates/orders_list.html
@@ -15,7 +15,7 @@
 -->
 
 {% for orders in object_list %}
-<li>{{ orders.typemodel }} - {{ orders.color  }}- {{ orders.date }} Invoice # {{orders.purchase_order_num}}<a href="{% url "updateorder" pk=orders.pk %}"> Update</a><a href="{% url "orderdelete" pk=orders.pk %}"> Delete</a></li>
+<li>{{ orders.typemodel }} - {{ orders.orderamount }} {{ orders.color  }}- {{ orders.date }} Invoice # {{orders.purchase_order_num}}<a href="{% url "updateorder" pk=orders.pk %}"> Update</a><a href="{% url "orderdelete" pk=orders.pk %}"> Delete</a></li>
     
 {% empty %}
     <li><h4> No orders listed </h4>
