--- a/templates/staff_list.html
+++ b/templates/staff_list.html
@@ -8,9 +8,11 @@
             
         </div>
     </nav>
-<ul>
+
 {% for inv in object_list %}
 <!--inventory -->
+<h3>AR15 Style</h3>
+<ul>
     <li>Ar15 Black : {{ inv.ar15black}}</li>
     <li>Ar15 FDE   : {{ inv.ar15fde }}</li>
     <li>Ar15 Stlh  : {{ inv.ar15stealth}}</li>
@@ -26,7 +28,11 @@
     <li>Blem Ar15 Rifle   : {{ inv.blemar15rifle }}</li>
     <li>Blem Ar15 Clear  : {{ inv.blemar15clear}}</li>
     <li>Blem Ar15 Pink : {{ inv.blemar15pink}}</li>
+    </ul>
+    {% endfor %}
+{% for inv in object_list %}
     <!-- 308 -->
+    <h3>AR 308 Style</h3>
     <li>Ar308 Black : {{ inv.ar308black}}</li>
     <li>Ar308 FDE   : {{ inv.ar308fde }}</li>
     <li>Ar308 Stlh  : {{ inv.ar308stealth}}</li>
@@ -40,6 +46,7 @@
     <li>Blem Ar308 Rifle   : {{ inv.blemar308rifle }}</li>
     <li>Blem Ar308 Pink  : {{ inv.blemar308pink}}</li>
     <!-- TAC9 -->
+    <h3>TAC-9 Receivers </h3>
     <li>Tac9 Black : {{ inv.tac9black}}</li>
     <li>Tac9 FDE   : {{ inv.tac9fde }}</li>
     <li>Tac9 Stlh  : {{ inv.tac9stealth}}</li>
@@ -53,6 +60,7 @@
     <li>Blem Tac9 Rifle   : {{ inv.blemtac9rifle }}</li>
     <li>Blem Tac9 Pink  : {{ inv.blemtac9pink}}</li>
     <!-- 80s -->
+    <h3> 80% Receivers</h3>
     <li>80 Black : {{ inv.black80}}</li>
     <li>80 FDE   : {{ inv.fde80 }}</li>
     <li>80 Stlh  : {{ inv.stealth80}}</li>
@@ -62,7 +70,7 @@
     <li>Blem 80 Stlh  : {{ inv.stealth80}}</li>
     <li>Blem 80 OD : {{ inv.rifle80}}</li>
 
-    <li>Notes: {{ inv.notes }}</li>
+    <h5>Notes: {{ inv.notes }}</h5>
 
     <p><a href="{% url 'updateinv' pk=inv.pk %}">Update</a></p>
 
