--- a/templates/staff_list.html
+++ b/templates/staff_list.html
@@ -65,10 +65,10 @@
     <li>80 FDE   : {{ inv.fde80 }}</li>
     <li>80 Stlh  : {{ inv.stealth80}}</li>
     <li>80 OD : {{ inv.rifle80}}</li>
-    <li>Blem 80 Black : {{ inv.black80}}</li>
-    <li>Blem 80 FDE   : {{ inv.fde80 }}</li>
-    <li>Blem 80 Stlh  : {{ inv.stealth80}}</li>
-    <li>Blem 80 OD : {{ inv.rifle80}}</li>
+    <li>Blem 80 Black : {{ inv.blemblack80}}</li>
+    <li>Blem 80 FDE   : {{ inv.blemfde80 }}</li>
+    <li>Blem 80 Stlh  : {{ inv.blemstealth80}}</li>
+    <li>Blem 80 OD : {{ inv.blemrifle80}}</li>
 
     <h5>Notes: {{ inv.notes }}</h5>
 
