--- a/templates/staffindex.html
+++ b/templates/staffindex.html
@@ -6,6 +6,7 @@
 <p> Our inventory and or brass/ejectors/build kits ect shut us down almost monthly. This system is designed 
 to help with keeping track of all this</p>
 <p> April</p>
+<li>When you add an item to the purchase order it must be removed by color and model when we get it in abnd also added to the Inventory as available. If that amount closes that purchase order color. Then delete the purchase order </li></br>
 <p> When you put in a purchase order, add it under "purchase orders" by color and model with the invoice #
 . If we receive a partial shipment then update the system to what we still have open. When the whole order is complete then 
 delete the entire order. Add up the total brass inserts/ejectors/serial num inserts for that order. Take it off 
