--- a/templates/staffindex.html
+++ b/templates/staffindex.html
@@ -1,6 +1,9 @@
 {% extends 'staffbase.html'%}
+{% load qr_code %}
 {% block bodyblock %}
 <div class="container-fluid">
+   {% qr_from_text "serial number# 123456789" size="s" image_format="png" error_correction="L" %}
+   
    <h5> how everything works </h5>
 <p> What we are trying to do </p>
 <p> Our inventory and or brass/ejectors/build kits ect shut us down almost monthly. This system is designed 
