--- a/templates/orders_list.html
+++ b/templates/orders_list.html
@@ -4,7 +4,7 @@
     <h1>Current Purchase Orders</h1>
     <nav class="navbar navbar-expand navbar-light bg-light">
         <div class="nav navbar-nav">
-            <a class="nav-item nav-link active" href="{% url 'addorder' %}">Add Order<span class="sr-only">(current)</span></a>
+            <a class="nav-item nav-link active" href="{% url 'addorder' %}">Add Purchase Order<span class="sr-only">(current)</span></a>
             
         </div>
     </nav>
