--- a/templates/staff_list.html
+++ b/templates/staff_list.html
@@ -1,6 +1,8 @@
 {% extends 'staffbase.html' %}
 {% block bodyblock %}
-<h1>Current Inventory</h1>    
+<div style="background-color:red;">
+<h1>Current Inventory</h1>
+</div>    
 {% for inv in object_list %}
 <div class="row">
     <!--StartSection -->
