--- a/templates/staff_list.html
+++ b/templates/staff_list.html
@@ -1,7 +1,7 @@
 {% extends 'staffbase.html' %}
 {% block bodyblock %}
-<div style="background-color:red;">
-<h1>Current Inventory</h1>
+<div style="background-color:blue">
+<h1 class = "text-white">Current Inventory</h1>
 </div>    
 {% for inv in object_list %}
 <div class="row">
