added supplier model

--- a/templates/consumables_list.html
+++ b/templates/consumables_list.html
@@ -13,6 +13,7 @@
    <li><p>- Tac 9 Ejectors -{{ objects.tac9ejector  }} </p></li>
    <li><p>- Ar15 Kit -{{ objects.ar15kit  }} </p></li>
    <li><p>- Ar308 Kit -{{ objects.AR308kit  }} </p></li>
+   <li><p>- Extended Mag Button -{{ objects.extendedmagrelease  }} </p></li>
    <li><p>- AR15 Buffer Assemblies -{{ objects.AR15_Buffer_Assembly}} </p></li>
    <li><p>- AR308 Buffer Assemblies -{{ objects.AR308_Buffer_Assembly}} </p></li>
    <li><p>- Ar308 Kit -{{ objects.AR308kit  }} </p></li>
