--- a/templates/staffbase.html
+++ b/templates/staffbase.html
@@ -19,6 +19,7 @@
             <a class="nav-item nav-link" href="{% url 'stafflist' %}">Inventory</a>
             <a class="nav-item nav-link" href="{% url 'orderlist' %}">Purchase Orders</a>
             <a class="nav-item nav-link" href="{% url 'consumableslist' %}">Consumables</a>
+            <a class="nav-item nav-link" href="{% url 'supplierlist' %}">Suppliers</a>
             <a class="nav-item nav-link" href="{% url 'logout' %}">LogOut</a>
         </div>
     </nav>
