--- a/templates/supplierslist.html
+++ b/templates/supplierslist.html
@@ -5,7 +5,7 @@
 <h3>Suppliers</h3>
 <nav class="navbar navbar-expand navbar-light bg-light">
     <div class="nav navbar-nav">
-        <a class="nav-item nav-link active" href="#">Add Supplier <span class="sr-only">(current)</span></a>
+        <a class="nav-item nav-link active" href="{% url 'addsupplier' %}">Add Supplier <span class="sr-only">(current)</span></a>
         
     </div>
 </nav>
