--- a/templates/addsupplier_form.html
+++ b/templates/addsupplier_form.html
@@ -8,6 +8,7 @@
     {{ form.as_table }}
     </table>
     <input type="submit" value="Submit">
+    <a href="{% url "supplierlist" %}"> Cancel</a> 
   </form>
 </div>
   
