--- a/templates/updatesupplier.html
+++ b/templates/updatesupplier.html
@@ -5,6 +5,7 @@
     <form method="post">{% csrf_token %}
     {{ form.as_p }}
     <input type="submit" value="Update">
+    <a href="{% url "supplierlist" %}"> Cancel</a> 
 </form>
 </div>
 {% endblock %}
