--- a/templates/addsupplier_form.html
+++ b/templates/addsupplier_form.html
@@ -1,7 +1,7 @@
 {% extends 'staffbase.html' %}
 {% block bodyblock %}
 <div class="container-fluid">
-    <h3>Add Suppliers Below</h3>
+    <h3>Add Suppliers</h3>
     <form action="" method="post">
     {% csrf_token %}
     <table>
