--- a/templates/consumables_list.html
+++ b/templates/consumables_list.html
@@ -5,23 +5,23 @@
     
 <ul>
 {% for objects in object_list %}
-   <li><p>- Big Brass-{{ objects.bigbrass }}  </li>
-   <li><p>- Little Brass-{{ objects.littlebrass  }} </p></li>
-   <li><p>- Serial Numbers- {{ objects.serialnum }} </p></li>
-   <li><p>- Tac-9 Arms- {{objects.tac9arm}} </p></li>
-   <li><p>- TAC-9 Buttons -{{ objects.tac9button }} </p></li>
-   <li><p>- Tac 9 Ejectors -{{ objects.tac9ejector  }} </p></li>
-   <li><p>- Ar15 Kit -{{ objects.ar15kit  }} </p></li>
-   <li><p>- Ar308 Kit -{{ objects.AR308kit  }} </p></li>
-   <li><p>- Extended Mag Button -{{ objects.extendedmagrelease  }} </p></li>
-   <li><p>- Tac9 Buffer Assembly -{{ objects.tac9bufferkit }}</p></li>
-   <li><p>- AR15 Buffer Assemblies -{{ objects.AR15_Buffer_Assembly}} </p></li>
-   <li><p>- AR308 Buffer Assemblies -{{ objects.AR308_Buffer_Assembly}} </p></li>
-   <li><p>- Ar308 Kit -{{ objects.AR308kit  }} </p></li>
-   <li><p>- 80 Jigs -{{ objects.jigs  }} </p></li>
-   <li><p>- Drill Bits -{{ objects.drillbits  }} </p></li>
-   <li><p>- Jig Screws -{{ objects.jigscrew  }} </p></li>
-   <li><p>- Pistol Grip Screws -{{ objects.pistolgripscrew  }} </p></li>
+   <li><p>- Big Brass: {{ objects.bigbrass }}  </li>
+   <li><p>- Little Brass: {{ objects.littlebrass  }} </p></li>
+   <li><p>- Serial Numbers: {{ objects.serialnum }} </p></li>
+   <li><p>- Tac-9 Arms: {{objects.tac9arm}} </p></li>
+   <li><p>- TAC-9 Buttons: {{ objects.tac9button }} </p></li>
+   <li><p>- Tac 9 Ejectors: {{ objects.tac9ejector  }} </p></li>
+   <li><p>- Ar15 Kit : {{ objects.ar15kit  }} </p></li>
+   <li><p>- Ar308 Kit : {{ objects.AR308kit  }} </p></li>
+   <li><p>- Extended Mag Button : {{ objects.extendedmagrelease  }} </p></li>
+   <li><p>- Tac9 Buffer Assembly : {{ objects.tac9bufferkit }}</p></li>
+   <li><p>- AR15 Buffer Assemblies : {{ objects.AR15_Buffer_Assembly}} </p></li>
+   <li><p>- AR308 Buffer Assemblies : {{ objects.AR308_Buffer_Assembly}} </p></li>
+   <li><p>- Ar308 Kit : {{ objects.AR308kit  }} </p></li>
+   <li><p>- 80 Jigs : {{ objects.jigs  }} </p></li>
+   <li><p>- Drill Bits : {{ objects.drillbits  }} </p></li>
+   <li><p>- Jig Screws : {{ objects.jigscrew  }} </p></li>
+   <li><p>- Pistol Grip Screws : {{ objects.pistolgripscrew  }} </p></li>
    <p>Notes: {{objects.consumablesnotes}}</p>
    <p><a href="{% url 'updateconsumables' pk=objects.pk %}">Update</a></p>
 
