--- a/templates/staffindex.html
+++ b/templates/staffindex.html
@@ -2,7 +2,7 @@
 {% load qr_code %}
 {% block bodyblock %}
 <div class="container-fluid">
-   {% qr_from_text "URLTO:https://tnainventory.herokuapp.com/staff/updateorder-" serialized.id size="s" image_format="png" error_correction="L" %}
+   {% qr_from_text "URLTO:https://tnainventory.herokuapp.com/staff/updateorder-" size="s" image_format="png" error_correction="L" %}
    
    <h5> how everything works </h5>
 <p> What we are trying to do </p>
