--- a/templates/serialized/staff_serialized.html
+++ b/templates/serialized/staff_serialized.html
@@ -6,12 +6,28 @@
 <nav class="navbar navbar-expand navbar-light bg-light">
     <div class="nav navbar-nav">
         <a class="nav-item nav-link active" href="{% url 'serialized:addserialized' %}">Add Serialized Inventory <span class="sr-only">(current)</span></a>
+        <a class="nav-item nav-link active" href="{% url 'serialized:serialized_upload' %}">Upload Incoming Inventory <span class="sr-only"></span></a>
+        <a class="nav-item nav-link active" href="">Outgoing Scan <span class="sr-only"></span></a>
+        <a class="nav-item nav-link active" href="">Monthly Inventory Scan <span class="sr-only"></span></a>
+        
+        
         
     </div>
 </nav>
-<div class="container">
-    <h5> To Update Inventory, Hit the Blue Serial number Link</h5>
+<h3> Serial Number Search</h3>
+<div class="card-columns">
+    <div class="card">   
+        <div class="form-group">
+        <label for="Search"></label>
+        <input type="text"
+            class="form-control" name="" id="" aria-describedby="helpId" placeholder="Enter Serial Number">
+            <input name="" id="" class="btn btn-primary" type="button" value="Submit">
+            <small id="helpId" class="form-text text-muted">Please enter the Serial Number of the Receiver you are looking for</small>
+    </div>          
 </div>
+<h5> To Update Inventory, Hit the Blue Serial Number Link</h5>
+</div>
+<h3>Serial Number List</h3>
 {% for inv in object_list %}
 
     <!--StartSection -->
@@ -20,11 +36,11 @@
     <ul>
         
         {% if inv.ininventory %}
-        <li><p> In Inventory, <a href=""> {{ inv.serialnumber }}</a> , Model:{{ inv.modeltype }}, Color: {{ inv.color }}, Date Aquired: {{ inv.dateaquired }}, Date Deposed: {{ inv.datedeposed }} </p></li>
+        <li><p> In Inventory, <a href=""> {{ inv.serialnumber }}</a> , {{ inv.modeltype }},  {{ inv.color }}, Date Aquired: {{ inv.dateaquired }}, Date Deposed: {{ inv.datedeposed }} </p></li>
         <p>Notes: {{ inv.notes }}</a></p>
         {% else %}
-        <p> Not in Inventory {{ inv.serialnumber }}, Model:{{ inv.modeltype }}, Color: {{ inv.color }}, Date Aquired: {{ inv.dateaquired }}, Date Deposed: {{ inv.datedeposed }} </p>
-        <p>Notes: {{ inv.notes }}</p> 
+        </li><p> Not in Inventory, <a href=""> {{ inv.serialnumber }}</a> , Model:{{ inv.modeltype }}, Color: {{ inv.color }}, Date Aquired: {{ inv.dateaquired }}, Date Deposed: {{ inv.datedeposed }} </p></li>
+        <p>Notes: {{ inv.notes }}</p> </li>
         {% endif %}           
                 
     </ul>
@@ -32,7 +48,7 @@
     <!--End Section -->
 
 {% empty %}
-    <h4> No Serialized Inventory Listed, We out Sucka </h4>
+    <h4> No Serialized Inventory Listed, We Out Sucka </h4>
 {% endfor %}
 </ul>
 </div>
