--- a/templates/staffbase.html
+++ b/templates/staffbase.html
@@ -20,6 +20,7 @@
             <a class="nav-item nav-link" href="{% url 'orderlist' %}">Purchase Orders</a>
             <a class="nav-item nav-link" href="{% url 'consumableslist' %}">Consumables</a>
             <a class="nav-item nav-link" href="{% url 'supplierlist' %}">Suppliers</a>
+            <a class="nav-item nav-link" href="{% url 'serialized:serializedlist' %}">Serialized</a>
             <a class="nav-item nav-link" href="{% url 'logout' %}">LogOut</a>
         </div>
     </nav>
