added updated by 20200326

--- a/templates/serialized/staff_serialized.html
+++ b/templates/serialized/staff_serialized.html
@@ -14,6 +14,7 @@
         
     </div>
 </nav>
+<h2> Ya'll dont mess with this yet, still working on it</h2>
 <h3> Serial Number Search</h3>
 <div class="card-columns">
     <div class="card">   
