added updated to templates

--- a/templates/staff_list.html
+++ b/templates/staff_list.html
@@ -75,11 +75,14 @@
             <li>Blem 80 FDE   : {{ inv.blemfde80 }}</li>
             <li>Blem 80 Stlh  : {{ inv.blemstealth80}}</li>
             <li>Blem 80 Rifle : {{ inv.blemrifle80}}</li>
+
     </div>
     <!--End Section -->
     <!--StartSection -->
     <div class="col-sm-4">
         <!--Notes -->
+        <h4>Updated by:</h4>
+         <p>{{inv.updatedby}}</p>
         <h4>Notes:</h4>
         <p>{{ inv.notes }}</p>
 
