--- a/templates/staff_list.html
+++ b/templates/staff_list.html
@@ -81,8 +81,12 @@
     <!--StartSection -->
     <div class="col-sm-4">
         <!--Notes -->
+        {% if inv.inventory %}
         <h4>Updated by:</h4>
          <p>{{inv.updatedby}}</p>
+        {% else %}
+        <p> update by : </p>
+        {% endif %}
         <h4>Notes:</h4>
         <p>{{ inv.notes }}</p>
 
