added advantage mfg view, 20200327

--- a/templates/staffbase.html
+++ b/templates/staffbase.html
@@ -21,6 +21,7 @@
             <a class="nav-item nav-link" href="{% url 'consumableslist' %}">Consumables</a>
             <a class="nav-item nav-link" href="{% url 'supplierlist' %}">Suppliers</a>
             <a class="nav-item nav-link" href="{% url 'serialized:serializedlist' %}">Serialized</a>
+            <a class="nav-item nav-link" href="{% url 'advantage' %}">Advantage Mfg</a>
             <a class="nav-item nav-link" href="{% url 'logout' %}">LogOut</a>
         </div>
     </nav>
