--- a/templates/staffindex.html
+++ b/templates/staffindex.html
@@ -16,7 +16,7 @@
     <!--StartSection -->
     <div class="col-sm-4">
         <!--inventory --> 
-        <h3>Inventory</h3>
+        <h3>Available Inventory</h3>
         <ul>
             <li>Ar15 Black : {{ inv.ar15black}}</li>
             <li>Ar15 FDE   : {{ inv.ar15fde }}</li>
@@ -61,26 +61,26 @@
             <!--inventory --> 
          <h3>Consumables</h3>
          <ul>
-            <li><p>- Big Brass: {{ objects.bigbrass }}  </li>
-            <li><p>- Little Brass: {{ objects.littlebrass  }} </p></li>
-            <li><p>- Serial Numbers: {{ objects.serialnum }} </p></li>
-            <li><p>- Tac-9 Arms: {{objects.tac9arm}} </p></li>
-            <li><p>- TAC-9 Buttons: {{ objects.tac9button }} </p></li>
-            <li><p>- Tac 9 Ejectors: {{ objects.tac9ejector  }} </p></li>
-            <li><p>- Ar15 Kit : {{ objects.ar15kit  }} </p></li>
-            <li><p>- Ar308 Kit : {{ objects.AR308kit  }} </p></li>
-            <li><p>- Extended Mag Button : {{ objects.extendedmagrelease  }} </p></li>
-            <li><p>- Tac9 Buffer Assembly : {{ objects.tac9bufferkit }}</p></li>
-            <li><p>- AR15 Buffer Assemblies : {{ objects.AR15_Buffer_Assembly}} </p></li>
-            <li><p>- AR308 Buffer Assemblies : {{ objects.AR308_Buffer_Assembly}} </p></li>
-            <li><p>- Ar308 Kit : {{ objects.AR308kit  }} </p></li>
-            <li><p>- 80 Jigs : {{ objects.jigs  }} </p></li>
-            <li><p>- Drill Bits : {{ objects.drillbits  }} </p></li>
-            <li><p>- Jig Screws : {{ objects.jigscrew  }} </p></li>
-            <li><p>- Pistol Grip Screws : {{ objects.pistolgripscrew  }} </p></li>           
+            <li>- Big Brass: {{ objects.bigbrass }}</li>
+            <li>- Little Brass: {{ objects.littlebrass  }}</li>
+            <li>- Serial Numbers: {{ objects.serialnum }}</li>
+            <li>- Tac-9 Arms: {{objects.tac9arm}}</li>
+            <li>- TAC-9 Buttons: {{ objects.tac9button }}</li>
+            <li>- Tac 9 Ejectors: {{ objects.tac9ejector  }}</li>
+            <li>- Ar15 Kit : {{ objects.ar15kit  }}</li>
+            <li>- Ar308 Kit : {{ objects.AR308kit  }} </li>
+            <li>- Extended Mag Button : {{ objects.extendedmagrelease  }} </li>
+            <li>- Tac9 Buffer Assembly : {{ objects.tac9bufferkit }}</li>
+            <li>- AR15 Buffer Assemblies : {{ objects.AR15_Buffer_Assembly}} </li>
+            <li>- AR308 Buffer Assemblies : {{ objects.AR308_Buffer_Assembly}} </li>
+            <li>- Ar308 Kit : {{ objects.AR308kit  }} </li>
+            <li>- 80 Jigs : {{ objects.jigs  }} </li>
+            <li>- Drill Bits : {{ objects.drillbits  }} </li>
+            <li>- Jig Screws : {{ objects.jigscrew  }} </li>
+            <li>- Pistol Grip Screws : {{ objects.pistolgripscrew  }} </li>           
          </ul>
-      {% endfor %}
-      </div>
+   {% endfor %}
+   </div>
 
 
 
