--- a/templates/staffbase.html
+++ b/templates/staffbase.html
@@ -17,6 +17,7 @@
         <div class="nav navbar-nav">
             <a class="nav-item nav-link active" href="{% url 'staff' %}">Home <span class="sr-only">(current)</span></a>
             <a class="nav-item nav-link" href="{% url 'stafflist' %}">Inventory</a>
+            <a class="nav-item nav-link" href="{% url 'ffl:fflindex' %}">FFL Database</a>
             <a class="nav-item nav-link" href="{% url 'orderlist' %}">Purchase Orders</a>
             <a class="nav-item nav-link" href="{% url 'consumableslist' %}">Consumables</a>
             <a class="nav-item nav-link" href="{% url 'supplierlist' %}">Suppliers</a>
