--- a/templates/ffl/addffl_form.html
+++ b/templates/ffl/addffl_form.html
@@ -4,16 +4,17 @@
     <nav class="navbar navbar-expand navbar-light bg-light">
         <ul class="nav navbar-nav">
             <li class="nav-item active">
-                <a class="nav-link" href="{% url "serialized:serializedlist" %}">Serialized Home  <span class="sr-only">(current)</span></a>
+                <a class="nav-link" href="{% url "ffl:fflindex" %}">FFL Home  <span class="sr-only">(current)</span></a>
             </li>
             <li class="nav-item">
-                <a class="nav-link" href="{% url "serialized:serializedlist" %}">Cancel</a>
+                <a class="nav-link" href="{% url "ffl:fflindex" %}">Cancel</a>
             </li>
         </ul>
     </nav>
 </nav>
 <div class="container-fluid">
-    <h3>Add Serialized Inventory Below</h3>
+    <h3>Add New FFL Below</h3>
+    *If updating an FFL use the Update form next to the listed name
     <form action="" method="post">
     {% csrf_token %}
     <table>
@@ -21,7 +22,7 @@
     </table>
     <input type="submit" value="Submit">
     <p>.</p>
-    <a href="{% url "serialized:serializedlist" %}"> <h5>   Cancel</h5></a>
+    <a href="{% url "ffl:fflindex" %}"> <h5>   Cancel</h5></a>
   </form>
   
 </div>
