--- a/templates/serialized/serialized_update.html
+++ b/templates/serialized/serialized_update.html
@@ -13,17 +13,13 @@
     </nav>
 </nav>
 <div class="container-fluid">
-    <h3>Add Serialized Inventory Below</h3>
-    <form action="" method="post">
-    {% csrf_token %}
-    <table>
-    {{ form.as_table }}
-    </table>
-    <input type="submit" value="Submit">
-    <p>.</p>
-    <a href="{% url "serialized:serializedlist" %}"> <h5>   Cancel</h5></a>
-  </form>
-  
+    <h3>Serialized Inventory Update Form</h3>
+    *This is an internal system and is not intended to be a replacement for GunStore Master
+    <!--update order form -->
+    <form method="post">{% csrf_token %}
+    {{ form.as_p }}
+    <input type="submit" value="Update">
+    </form>
+
 </div>
-  
 {% endblock %}
