--- a/templates/ffl/updateffl.html
+++ b/templates/ffl/updateffl.html
@@ -1,25 +1,36 @@
 {% extends 'staffbase.html' %}
 {% block bodyblock %}
-<nav class="navbar navbar-expand navbar-light bg-light">
+
+<div class="row">
+  <div class="col-12">
     <nav class="navbar navbar-expand navbar-light bg-light">
-        <ul class="nav navbar-nav">
-            <li class="nav-item active">
-                <a class="nav-link" href="{% url "ffl:fflindex" %}">FFL Home  <span class="sr-only">(current)</span></a>
-            </li>
-            <li class="nav-item">
-                <a class="nav-link" href="{% url "ffl:fflindex" %}">Cancel</a>
-            </li>
-        </ul>
+        <nav class="navbar navbar-expand navbar-light bg-light">
+            <ul class="nav navbar-nav">
+                <li class="nav-item active">
+                    <a class="nav-link" href="{% url "ffl:fflindex" %}">FFL Home  <span class="sr-only">(current)</span></a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="{% url "ffl:fflindex" %}">Cancel</a>
+                </li>
+            </ul>
+        </nav>
     </nav>
-</nav>
-<div class="container-fluid">
-    <h3>Update FFL</h3>
+</div>
+<div class="col-4">
+  <h3>Update FFL</h3>
     *Make Sure that All fields are Correct and We have an Updated Image
     <!--update order form -->
     <form method="post">{% csrf_token %}
     {{ form.as_p }}
     <input type="submit" value="Update">
     </form>
-
 </div>
+  <div class="col-8">
+    <iframe id="encoder_iframe" height=75% width="75%" src="https://fflezcheck.atf.gov/fflezcheck/">
+    </iframe>
+</div>
+<div class="col">
+</div>
+
+
 {% endblock %}
