--- a/templates/ffl/updateffl.html
+++ b/templates/ffl/updateffl.html
@@ -26,8 +26,12 @@
     </form>
 </div>
   <div class="col-8">
+  <h4> ATF EZ Check used to verify only</h4>
+  * if you are going to update our internal database make sure you get a fresh copy of the FFL!
     <iframe id="encoder_iframe" height=75% width="75%" src="https://fflezcheck.atf.gov/fflezcheck/">
     </iframe>
+    
+    
 </div>
 <div class="col">
 </div>
