fixed ffl database

--- a/templates/ffl/updateffl.html
+++ b/templates/ffl/updateffl.html
@@ -18,6 +18,7 @@
 </div>
 <div class="col-4">
   <h3>Update FFL</h3>
+  <h4><a href="{% url 'ffl:fflindex' %}">Cancel</a></h4>
     *Make Sure that All fields are Correct and We have an Updated Image
     <!--update order form -->
     <form method="post">{% csrf_token %}
