--- a/templates/ffl/fflindex.html
+++ b/templates/ffl/fflindex.html
@@ -1,24 +1,31 @@
 {% extends 'staffbase.html' %}
 {% block bodyblock %}
-<nav class="navbar navbar-expand navbar-light bg-light">
-    <nav class="navbar navbar-expand navbar-light bg-light">
-        <ul class="nav navbar-nav">
-            <li class="nav-item active">
-                <a class="nav-link" href="{% url "ffl:fflindex" %}">FFL Home  <span class="sr-only">(current)</span></a>
-            </li>
-            <li class="nav-item">
-                <a class="nav-link" href="{% url "ffl:addffl" %}">Add FFL</a>
-            </li>
-        </ul>
-    </nav>
-</nav>
-<p> ffl index page </p>
-
-{% for ffl in ffl %}
-Company Name : {{ ffl.fflcompanyname }}, FFL# {{ ffl.fflnumber }}, FFL Exp: {{ ffl.fflexp }}<a href="{% url 'ffl:updateffl' pk=ffl.pk %}">Update</a>
-{% empty %}
-No FFLS Listed, Go Enter Some 
-{% endfor %}
+<div class="row">
+  <div class="col-2">
+        <nav class="navbar navbar-expand navbar-light bg-light">
+            <nav class="navbar navbar-expand navbar-light bg-light">
+                <ul class="nav navbar-nav">
+                    <li class="nav-item active">
+                        <a class="nav-link" href="{% url "ffl:fflindex" %}">FFL Home  <span class="sr-only">(current)</span></a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="{% url "ffl:addffl" %}">Add FFL</a>
+                    </li>
+                </ul>
+            </nav>
+        </nav>
 </div>
-  
+  <div class="col">
+    <h3> FFL's On File </h3>
+        <ul>
+        {% for ffl in ffl %}
+
+            <li> Company Name : {{ ffl.fflcompanyname }}, FFL# {{ ffl.fflnumber }}, FFL Exp: {{ ffl.fflexp }}<a href="{% url 'ffl:ffldetail' pk=ffl.pk %}">View</a>
+
+        {% empty %}
+        No FFLS Listed, Go Enter Some 
+        {% endfor %}
+        </ul>
+</div>
+ 
 {% endblock %}
