added ffl database integration

--- a/templates/ffl/ffl_detail.html
+++ b/templates/ffl/ffl_detail.html
@@ -32,8 +32,10 @@
     -->
         <ul>
             <li>Premise Address: {{ object.fflmailaddress}}
+            {{object.fflcity}} {{object.fflstate}} {{object.fflzipcode}}
             <li>FFl Number : {{ object.fflnumber }}
             <li>FFl Expiration: {{ object.fflexp }}
+            <li>CFD: {{object.fflcfd}}
             <li>Phone Number : {{object.fflphone }}
             <li>Email: {{ object.fflemail }}
             <li>Contact Name: {{ object.fflcontactname }}
