--- a/templates/serialized/updateserialized.html
+++ b/templates/serialized/updateserialized.html
@@ -2,7 +2,7 @@
 {% block bodyblock %}
 
 <div class="col-4">
-  <h3>Update FFL</h3>
+  <h3>Update Serialized Inventory</h3>
   <h4><a href="{% url 'serialized:serializedlist' %}">Cancel</a></h4>
     
     <!--update order form -->
