20200403 added city to ffl search

--- a/templates/serialized/serialized_upload.html
+++ b/templates/serialized/serialized_upload.html
@@ -17,6 +17,7 @@
         <button type="submit">Upload</button>
     </form>
     {% endif %}
+    <p> The Proper order of the .CSV shall be , Serial Number, Gunstore Master Firearm ID, Model Type, Color, Date Aquired, Notes
     {% for profile in profiles %}
     {{profile.name}}
     {% endfor %}
