--- a/templates/supplierslist.html
+++ b/templates/supplierslist.html
@@ -1,8 +1,11 @@
 {% extends 'staffbase.html'%}
 {% load static %}
 {% block bodyblock %}
+<div style="background-color:blue">
+    <h1 class = "text-white">Suppliers</h1>
+    </div> 
+<div class="col">
 <div class="container-fluid">
-<h3>Suppliers</h3>
 <nav class="navbar navbar-expand navbar-light bg-light">
     <div class="nav navbar-nav">
         <a class="nav-item nav-link active" href="{% url 'addsupplier' %}">Add Supplier <span class="sr-only">(current)</span></a>
