--- a/templates/index.html
+++ b/templates/index.html
@@ -37,17 +37,12 @@
       </div>
         <!-- nav -->
     <div class="container-fluid">
-      <nav class="navbar navbar-expand navbar-light bg-light">
-          <div class="nav navbar-nav">
-              <a class="nav-item nav-link active" href="{% url 'index' %}">Home <span class="sr-only">(current)</span></a>
-              <a class="nav-item nav-link" href="{% url 'inventory' %}">Inventory</a>
-          </div>
-      </nav>
+      
       {% if user.is_authenticated %}
       <p>Hi {{ user.username }}
       <p><a href="{% url 'logout' %}">Log out</a></p>
       {% else %}
-      <p><a href="{% url 'login' %}">Log In </a></p>
+      <p><a href="{% url 'login' %}">Staff Log In </a></p>
       {% endif %}
     </div>
     <!-- Startbody content -->
