--- a/templates/inventory_list.html
+++ b/templates/inventory_list.html
@@ -3,17 +3,41 @@
 {% block bodyblock %}
 <div class="container-fluid">
     <h1>Current Inventory</h1>
+    <p> Current shipping times are 2-6 weeks due to shipping backloads from our suppliers and seasonally higher volume of orders. We appreciate your patience.</p>
 <ul>
-{% for inv in object_list %}
-
-{% if inv.blem == True %}
-    <li>Blemish Product - {{ inv.typemodel }} - {{ inv.color  }}- {{ inv.instock }}</li>
-    {% else %}
-    <li>{{ inv.typemodel }} - {{ inv.color  }}- {{ inv.instock }}</li>
-{% endif %}
-{% empty %}
-    <li><h4> No inventory listed please call 731-334-5106 for an update </h4>/li>
-{% endfor %}
-</ul>
-</div>
+    {% for inv in object_list %}
+    <div class="row">
+        <!--StartSection -->
+        <div class="col-sm-3 col-md-3 col-lg-6">
+            <!--inventory --> 
+            <h3>Available Inventory</h3>
+            <p>* Our inventory changes daily and we manufacture our receivers locally </p>
+            <ul>
+                <li>Ar15 Black : {{ inv.ar15black}}</li>
+                <li>Ar15 FDE   : {{ inv.ar15fde }}</li>
+                <li>Ar15 Stlh  : {{ inv.ar15stealth}}</li>
+                <li>Ar15 OD : {{ inv.ar15od}}</li>
+                <li>Ar15 Rifle   : {{ inv.ar15rifle }}</li>
+                <li>Ar15 Clear  : {{ inv.ar15clear}}</li>
+                <li>Ar15 Pink  : {{ inv.ar15pink}}</li>
+                <li>Ar308 Black : {{ inv.ar308black}}</li>
+                <li>Ar308 FDE   : {{ inv.ar308fde }}</li>
+                <li>Ar308 Stlh  : {{ inv.ar308stealth}}</li>
+                <li>Ar308 OD : {{ inv.ar308od}}</li>
+                <li>Ar308 Rifle   : {{ inv.ar308rifle }}</li>
+                <li>Ar308 Pink  : {{ inv.ar308pink}}</li>
+                <li>Tac9 Black : {{ inv.tac9black}}</li>
+                <li>Tac9 FDE   : {{ inv.tac9fde }}</li>
+                <li>Tac9 Stlh  : {{ inv.tac9stealth}}</li>
+                <li>Tac9 OD : {{ inv.tac9od}}</li>
+                <li>Tac9 Rifle   : {{ inv.tac9rifle }}</li>
+                <li>80 Black : {{ inv.black80}}</li>
+                <li>80 FDE   : {{ inv.fde80 }}</li>
+                <li>80 Stlh  : {{ inv.stealth80}}</li>
+                <li>80 Rifle : {{ inv.rifle80}}</li>           
+            </ul>
+       </div>
+    {% endfor %}
+    </ul>
+    </div>
 {% endblock %}
